[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/LockedDoor.gd" type="Script" id=2]
[ext_resource path="res://GFX/PNG/Tiles/tile_463.png" type="Texture" id=3]
[ext_resource path="res://Scenes/NumberPad.tscn" type="PackedScene" id=4]
[ext_resource path="res://Theme.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 16 )

[node name="LockedDoor" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="Sprite" parent="." index="3"]

editor/display_folded = true
modulate = Color( 1, 1, 1, 1 )
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="4"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="NumberPad" parent="CanvasLayer" index="0" instance=ExtResource( 4 )]

visible = false
margin_right = 300.0
margin_bottom = 400.0

[node name="ExitDetection" type="Area2D" parent="." index="5"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDetection" index="0"]

position = Vector2( 0, -24 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="." index="6" groups=[
"labels",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -33.0
margin_top = -52.0
margin_right = 67.0
margin_bottom = -17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "Test"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[connection signal="combination_correct" from="CanvasLayer/NumberPad" to="." method="_on_NumberPad_combination_correct"]

[connection signal="body_entered" from="ExitDetection" to="." method="_on_ExitDetection_body_entered"]


